@@ -6,29 +6,9 @@ use strictures 2;
 
 use base 'App::SimsLoader::Command';
 
-use DBI;
-
-# These are the drivers that come bundled with DBI that we do not want to
-# report as being available.
-my %skip = map { $_ => 1 } qw(
-  DBM
-  ExampleP
-  File
-  Gofer
-  Proxy
-  Sponge
-);
-
-sub find_dbds {
-  sort {
-    lc($a) cmp lc($b)
-  } grep {
-    !$skip{$_}
-  } DBI->available_drivers;
-}
-
 sub execute {
-  say for find_dbds();
+  my $self = shift;
+  say for map { $self->driver_to_human($_) } $self->find_dbds();
 }
 
 1;
