@@ -3,13 +3,13 @@ use 5.22.0;
 use strictures 2;
 
 use Test::More;
-use t::common qw(success);
+use t::common qw(drivers success);
 
 use App::SimsLoader;
 
 success "listing available drivers" => {
   command => 'drivers',
-  stdout  => "mysql\nSQLite\n",
+  stdout  => join("\n", sort(drivers())) . "\n",
 };
 
 done_testing;
